[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/life_counter.png" type="Texture" id=1]
[ext_resource path="res://scripts/Projectile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 2048
collision_mask = 2048
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
